--- a/charts/openebs/templates/deployment-maya-apiserver.yaml
+++ b/charts/openebs/templates/deployment-maya-apiserver.yaml
@@ -166,4 +166,8 @@ spec:
       affinity:
 {{ toYaml .Values.apiserver.affinity | indent 8 }}
 {{- end }}
+{{- if .Values.imagePullSecrets }}
+      imagePullSecrets:
+      - name: "{{ .Values.imagePullSecrets }}"
+{{- end }}
 {{- end }}
